feat: 시큐리티 의존성 추가 및 기본 유저 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,9 @@ spring:
   mvc:
     problemdetails:
       enabled: true
+
+logging:
+  level:
+    org:
+      springframework:
+        security: trace
